--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -20,12 +20,7 @@
         <div class="container">
           <div class="row">
             {% for song  in songs %}
-<form action="/store_features" method="POST">
-            <div class="form-group">
 
-                <input type="hidden" value={{ song.song_id }} name="song_id" class="form-control">
-                <input type="hidden" value={{ song.preview_url }} name="preview_url" class="form-control">
-    </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ song.album_image_url }}" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"></img>
@@ -33,8 +28,14 @@
                   <p class="card    -text">{{ song.song_name }}</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
+                        <form action="/store_features" method="POST">
+            <div class="form-group">
 
+                <input type="hidden" value={{ song.song_id }} name="song_id" class="form-control">
+                <input type="hidden" value={{ song.preview_url }} name="preview_url" class="form-control">
+    </div>
                       <button type="submit" class="btn btn-sm btn-outline-secondary">Play</button>
+                        </form>
                     </div>
                   </div>
                 </div>
