--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -27,8 +27,12 @@
         <input name="age" class="form-control" id="InputAge" placeholder="Age">
     </div>
     <div class="form-group">
+        <label for="InputExplicit">Allow Explicit Content (T/F)</label>
+        <input name="explicit" class="form-control" id="InputExplicit" placeholder="Allow Explicit Content (T/F)">
+    </div>
+    <div class="form-group">
         <label for="InputLocation">Location</label>
-        <input name="location" class="form-control" id="InputLocation"  placeholder="Location">
+        <input name="location" class="form-control" id="InputLocation" placeholder="Location">
     </div>
     <div class="form-group">
         <label for="InputArtist">Favorite Artist</label>
