--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}{%endblock %}</title>
+  <title> Admin Page </title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -34,11 +34,11 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success justify-content-end">
-  <a class="navbar-brand" href="/">Home</a>
-  <a class="navbar-brand" href="/register">Register</a>
-  <a class="navbar-brand" href="/logout">Logout</a>
-  <a class="navbar-brand" href="/discover">Discover</a>
-  <a class="navbar-brand" href="/history">History</a>
+  <a class="navbar-brand" href="#"></a>
+  <a class="navbar-brand" href="#"></a>
+  <a class="navbar-brand" href="#"></a>
+  <a class="navbar-brand" href="#"></a>
+  <a class="navbar-brand" href="#"></a>
 </nav>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -50,6 +50,10 @@
   <br> <br>
   <h1 class="display-1 text-center">MusicForYou</h1>
   <br> <br>
+    <h2> Admin Page </h2>
+    <h3><a class='btn btn-link' href='/admin/analyze'>Analyze Dataset</a></h3>
+    <h3><a class='btn btn-link' href='/admin/visualize'>Visualize Dataset</a></h3>
+    <h3><a class='btn btn-link' href='/admin/NMF'>NMF</a></h3>
   {% block content %}{% endblock %}
 </div>
 </body>
